# ChangeLog for media-libs/exiftool
# Copyright 1999-2014 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/media-libs/exiftool/ChangeLog,v 1.141 2014/06/21 04:10:31 radhermit Exp $

*exiftool-9.65 (21 Jun 2014)

  21 Jun 2014; Tim Harder <radhermit@gentoo.org> +exiftool-9.65.ebuild:
  Version bump.

*exiftool-9.64 (18 Jun 2014)

  18 Jun 2014; Tim Harder <radhermit@gentoo.org> +exiftool-9.64.ebuild:
  Version bump.

*exiftool-9.62 (28 May 2014)

  28 May 2014; Tim Harder <radhermit@gentoo.org> +exiftool-9.62.ebuild:
  Version bump.

*exiftool-9.61 (23 May 2014)

  23 May 2014; Tim Harder <radhermit@gentoo.org> +exiftool-9.61.ebuild:
  Version bump.

*exiftool-9.59 (06 May 2014)

  06 May 2014; Tim Harder <radhermit@gentoo.org> +exiftool-9.59.ebuild:
  Version bump.

*exiftool-9.58 (25 Apr 2014)

  25 Apr 2014; Tim Harder <radhermit@gentoo.org> +exiftool-9.58.ebuild:
  Version bump.

  25 Apr 2014; Tim Harder <radhermit@gentoo.org> exiftool-9.12.ebuild,
  exiftool-9.55.ebuild:
  Drop $S set by perl-module eclass.

*exiftool-9.12 (25 Apr 2014)
*exiftool-9.55 (25 Apr 2014)

  25 Apr 2014; Tim Harder <radhermit@gentoo.org> +exiftool-9.12.ebuild,
  +exiftool-9.55.ebuild, -exiftool-9.120.0.ebuild, -exiftool-9.550.0.ebuild:
  Revert to regular, upstream version numbering.

  25 Apr 2014; Tim Harder <radhermit@gentoo.org> -exiftool-9.270.0.ebuild,
  -exiftool-9.500.0.ebuild, -exiftool-9.530.0.ebuild:
  Remove old.

*exiftool-9.550.0 (04 Apr 2014)

  04 Apr 2014; Tim Harder <radhermit@gentoo.org> +exiftool-9.550.0.ebuild:
  Version bump.

*exiftool-9.530.0 (22 Feb 2014)

  22 Feb 2014; Tim Harder <radhermit@gentoo.org> +exiftool-9.530.0.ebuild:
  Version bump.

  15 Feb 2014; Tim Harder <radhermit@gentoo.org> -exiftool-8.50.ebuild,
  -exiftool-8.60.ebuild, -exiftool-8.65.ebuild, -exiftool-8.75.ebuild,
  -exiftool-8.770.0.ebuild, -exiftool-8.850.0.ebuild, -exiftool-8.900.0.ebuild,
  -exiftool-9.10.0.ebuild, -exiftool-9.40.0.ebuild: