@@ -3,14 +3,16 @@ Hash: SHA256
 
 DIST blaze-0.4.1.tar.gz 712327 SHA256 5747b446adc41fac541e56a861865bc98e8db8cf2ffc48fc8e8793183c010153 SHA512 a812475c493633bdd1ab92e0fcfdd01a94f26ee869c907b9ac43e5ea3374f967ec9780e6c47969c522869e6247a882df4128f2729a0a374a4a2d0fd69d063527 WHIRLPOOL e2a7ab060fa355a41b4f49f69d41a1f7f0a06fb30efd4b4582f3e2b786f3bee84a571e0edc98255ad2ae81bb9ccdf28fe97dd68b7a8bcc94c4b366ccd873821f
 DIST blaze-0.4.2.tar.gz 751086 SHA256 8916b83cf54c67d0b4c4c175b8e8b62c78c5aa04e4452af84e9f5ed3af4b5276 SHA512 2070bb0b316f8e7ece51da5e85cc70cfaf4074631102224a8d46192264184b6834329cbe4ea7bacb565750231ce1d8efe59f40f0ba7ef5634d18e9a956bd21b6 WHIRLPOOL ad8d8fc15d0c980f36a4e114bb46c02da09888093ce11086593c8cbaa06d47c92f4bc1e33f1cec6aafdc4e687c2728d8a374091db6b608efbcc93bffbdc1ad59
+DIST blaze-0.5.0.tar.gz 751362 SHA256 ae3120daeaac7099c768c4e492ae44d3dbc0c4b7a25959a80f93a8701e1c0267 SHA512 e165daf8952b30ec52b7be8db26b84a68aa28d885c1936c1fd39da214621ddeb28f0d7261b30912fb0f0e8fab5c0e2c6ced37ade822e9c49d63b5597159ebc96 WHIRLPOOL 68f4e364b4e028ae44f86e23071944fc954c91e0d27dc53c19aded05843a2e9f5962d4252b5ec2e1a5ff61bc03d024d369adec241d84ce6f735984708a8fbdc6
 EBUILD blaze-0.4.1.ebuild 1346 SHA256 fbee01f149fbe63ef997f098cfd344c6dfc45cf4294feb00718a85ce15705fce SHA512 89f84663e1e0da6fc3c1a14635f22f967a1af46008c84d152f84bf3f684169e12f1d20bde3009bfb8b94e2e23855bb54afe6e10f02e66651576a6f77b7b20ad2 WHIRLPOOL 8a43d2189905f9224810ef506fa9a695cdf485ad6baf09939c45d95b5197905122fd3c33787b72f8dd9a89e68db5123c9f15698be178ba41d8a24cf4820fe02d
 EBUILD blaze-0.4.2.ebuild 1346 SHA256 333e50471b2a5eeb6d7461ec0a4bb60057e57debda549e0f63269dc6a8f2cb9d SHA512 b1e02b57c721a82004e341de8d5b62b1f43b6650bd6d8e744198b9c8c72e1bbef8b7f1d1bcd687c8e267c0ceff662e20871a457550698243339b0af198fff1f7 WHIRLPOOL 4d6acb996cdd728719024c8a5f33b834f1a4522da0b3a8602c6ab6853c3776c54f910a0abe4e37f80adc321f28276d7bfd7be56f56f499ea6382a1b28fd517ae
-MISC ChangeLog 591 SHA256 4e9d87bb111152bc6f3dfa8e0dae1d00ba176db25154641396de70cccb9f514f SHA512 d36acbc69ba9d2fb93b43617db3be2fa0e17d62227024687bab3ffb6cf7edf29ceaf24829970afe5119a8a8a052456f49dfd072c7acc0375c3c7cf5a0e69a292 WHIRLPOOL 3d3b5fbf81d32845c9de73524d8f5974a8b4eec20fda1907baeb2dde2f3e03e223c253a8d1036e014e02fa5b582c03bc76a11829f6d3fa35d33fd1f9b57c1458
+EBUILD blaze-0.5.0.ebuild 1495 SHA256 3b42c1dfcdd2dbf1d8deed97f6745bfb46e2040235c23db3164c5280682faaba SHA512 eb5af992faafe5333bc838cbeb94411ef5d6bb1ccddcca2cd1a6d90e3fa0215ff95f811bfeb759f7986bc06ede0898cc9f0e2b9c7311dce2f2b22d5b7d18a37d WHIRLPOOL 5cd0a09b97e367955c8e63a0d2c21d3a64ee101c20f8a0497ead1d56d93baba047479f0c81be6f5cf42fe0d666534692745195df5329026231edeb47b904d89a
+MISC ChangeLog 711 SHA256 b0287d7ee453c77c1814802abbe7cc1d381dfb4c6faa58e67729018baa2e5027 SHA512 e73d983d8b8c4d33da76d98612c842e35b9f16ed55867f8a8f7791645d6d99b8bb6c2098c9725ca46a9076c9e95f5725608d01906de695e169ca27e45950f5c8 WHIRLPOOL b4ff735958c2530b13979e29a9e93278108a68c59a800b75aebefd150940ab501d43a7c1f27a49b6157ef28b701d7bb11038ca0cbc615266c0cf314fb3acd344
 MISC metadata.xml 444 SHA256 3b34caf899828e49ff64ef22e0f3d2953e043d99d0c56a291a9456b1453a6f4a SHA512 53a353b79549b0e6c42181702e086e8d8f410d1a33a4e557cfaf784e4c845254330821e99d057018016f1abe89d897ab8143c1cac0a7b644cda2354b648f2455 WHIRLPOOL 88779c4487d94a00056e65e26a68cc0267241b740d146c3b0bc9a05b9fe8d1bfa56ca31361957abfa00f18dbd77d12b23f75bce37c75b45544908c75d4f0bc02
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2.0.22 (GNU/Linux)
 
-iEYEAREIAAYFAlMJOGMACgkQ1ycZbhPLE2CxMwCdHAZVoSXGlcAZujwdbwqo+ot0
-RVcAoJpx3dLQ4x4SJevDfApOck0lHj8H
-=Bxhq
+iEYEAREIAAYFAlO2NdMACgkQcaHudmEf86ok2wCfcyMIlLlA5gyyGiTIBSDUxaLe
+VI4An3Gr0hM3BtJrTrHECCv6L44FMXcy
+=/dbO
 -----END PGP SIGNATURE-----
