@@ -9,6 +9,7 @@ DIST Image-ExifTool-9.61.tar.gz 3824106 SHA256 e30196938f291f95fa94bff87e7c3a395
 DIST Image-ExifTool-9.62.tar.gz 3828234 SHA256 0e545ba9ab73254e5c0b1487b8f494faa47532d3f2a92cea97ac289a2baa77cc SHA512 bea8fc1d6c82423a6ecef9e2051850d367017566a5956524848a3db7e42ea62c1c632019574657722ee86bfa46afd643b715505c6fbd30ac47df457e0ee9c655 WHIRLPOOL 4c93e8f5d97b01abdca1fb388ed74d4b00e66abdb92a74df02763c9e3cc58173c7371266ff20f19aadb31c668ea5553347f1a0aed2f67081b4616ae4b605a2af
 DIST Image-ExifTool-9.64.tar.gz 3838757 SHA256 2b6b3f331705fe5ace27517aaa3e8df9a2e22e9bc9b48059ee4aaf9d85e9d85a SHA512 98b0b5ffc7f604b904ecac0b8fbe0abcbe3e0e20866cb160f414c05dd5c321d41bbe91df11ee9a37c85b0fc7d9f922e60548ba855cc558961c7a5b7df4db31cd WHIRLPOOL 29d53621911b3a40e4eef78a8f7250430dd8a46f7eb5512dc2340282bf6eaecdfb3381e7b492f5159545f1ef6f0fee743d3227b10a5427ee9bcce130c53ad093
 DIST Image-ExifTool-9.65.tar.gz 3841024 SHA256 93b34fa337d957e2f52636aa54e6aea86f933a08a8d8f38f64e3e61a02d079f6 SHA512 41f372504bb2bc1aab1cf971d0bfc7181b612177c27abd6c76553dde6eaf2ccacf5a8eeca1edb9e3c48dbfbcac4e25c34e655d3429e6dc8fc1a8f506d71284da WHIRLPOOL 69748f9726b79c43eb38bf8aae94aac966b9b779a273d582ba513e329503ec6ec624677c5cc19d01b387539b18f65baec18a59904dd3b640e5cb3821130fc6aa
+DIST Image-ExifTool-9.66.tar.gz 3843638 SHA256 ea675ad90c2251c2542225b85b642f070ce9513cdc733d0168539889871800cf SHA512 fe0a894d81ad6809f0c85a176483215cb571a97ccee66fa9df7cffa64d487a4c3257c22ef4d5a1f92fb006d6b83361052a81252279c1301e1b873b8d76f1a903 WHIRLPOOL 6a6fb4d10f43326ff13d7cf1e91e07542b27b9853d948df63a713b36fa995b5bec9b269c0dda1b015eb368373ba39c363fbdda99fde34d2a344f3e52a60d117b
 EBUILD exiftool-9.12.ebuild 649 SHA256 d5720c4b9b896f347528d5a6f1c09ac22f2ed71313d132f935c87fc129fcaf05 SHA512 2a5a08fa832c71f4614fe9883404089854d4ba21a86b16b951deb8cff70742d71e8195b987725d4f1c4b28da418492af360d6864ab86863ef55c93010b25cd6e WHIRLPOOL 07539c0a29eba451b2e0dc80e83377bed9df61b76b771692b0115d21da27e68d2ae736a0dc782ad9a19a824151aac010fc0fe8b9380954ba8a452efab65bd31d
 EBUILD exiftool-9.55.ebuild 653 SHA256 6037bbcf7127ed54ddff158936507b66437fce5ca71d6fa0fdaca93112cd4986 SHA512 6d3e9cac5125e3feac6d7087fded22b74ae9deb449be959ac89abc8fade0962b9f070066fa2a4e1e37bd162654506915c538e56af290613e635210ac07bc1fb4 WHIRLPOOL 6321c2197c9acc5a6ec0319339c66ddf178833b36df1a55873adfca2a9232deef91bd1c9227620b215cb13cf86b86db20b394a6af41fa06d1f6b2f87fecd86b4
 EBUILD exiftool-9.58.ebuild 645 SHA256 2b5734094c4b5601fb2998483c09608299e5f7cf026a830ce1c33654d464f7cb SHA512 6a1f6c8edfd9c3811e4286e1608b2e958f8b0da3b60239367201b49c8093b515ac6e8a68b63a88a9664c01364fab60c97cd28fea2cde40bf61db52254157f7d9 WHIRLPOOL 4e64b4f9c6010bc3958a1ddbdd7fd5db3a4608f4d005c237cb7425f6a26ea2f2266ebbe583d0dd4340eda308c0b5cbc39b7a82e0e25f249a4444a8e1f40ffbf6
@@ -17,16 +18,17 @@ EBUILD exiftool-9.61.ebuild 645 SHA256 8e4a50c07a2837e9143b4cee77fafc5be28d20bb0
 EBUILD exiftool-9.62.ebuild 645 SHA256 d55b9c5dc72315cd51b94dc29ad5a39c191d6e24bcc10b8a183ee657e7a60d2f SHA512 de2692c3b364e8b6f0928f1d2d6407cf4400f4b46e1b98dcaf677621e7b01a121bd4ca1026f656491678c90a4f757658de9a7718c68f304a76b6cd718825eac9 WHIRLPOOL 61d93abce334611438931b60c773b0465992694da7f5272feb8f53184701c5b3cdb684b4f7a1076734da641520139218acc50685ce4235691966beff3ff0220b
 EBUILD exiftool-9.64.ebuild 645 SHA256 862a1fef920ff576c4afcb2dbf9f6cca5b17029f885c1df213f6ef12d90082ac SHA512 5cf4896a8a4f90ae004f89b6b8caf92b019b15c0a0a54d208fbc594cb37113effcdd0ea92368f13408018d26e45f8965d72b01b1abd5484f006478fbcad60985 WHIRLPOOL dcdf0eb82780b1f0abed016dc13565990712cb114ade4e98d3bee7e78eea83a5a0c80dbb56cc4ee81420a3851575cf3b8a16d223c0e6a4a7123132d4fde27179
 EBUILD exiftool-9.65.ebuild 645 SHA256 02b8a9dfbffc3f2004918d426b2df7363628925cb95dcd22066c8109b417f499 SHA512 b98d9041d7e117d21251ed5ae74557c52760a6181cbf5d2f478b95537f988bf1f94e8d57fb2cce3f7702df7cfd70214480622775e14beeb448d2cd7e77d59203 WHIRLPOOL 234c3db950f7a24e8646a43521d6ebbbd573e273b1547706376429acbaf362b16a2014567c5b8904198cb1fc58cbfdc169521fb4383d3aef785d3e51017c7e5c
-MISC ChangeLog 17865 SHA256 9bbe843db1ffb398f757581975332455ffbf8123e9834de1208adcc99a0c8053 SHA512 c02cdc0d7056053d9f52ebd4f85567c4ab55a55e721fb7b5b6bffe46914f06e1451a3b4aad1b3df4af05ce8127655c4926ae14d8d43254f80ef6f024ab8f83a2 WHIRLPOOL 736281902652649fec0976449a0a1925749fe9ab11b78c557970f831ca45206b2851f081fe2ff38e12898f562733f8db024391ea9d5b681462e64181bbdaf41f
+EBUILD exiftool-9.66.ebuild 645 SHA256 6dd442808ed45a2dd3555ce75698859498a57f550b55b34a2ec11b9f6a47da98 SHA512 459ffab282622ea41b4400b46a19b72fd6b9422a93bf47e4235a6495990b3def8dc76eebf08f8d784954ea7a052fa6f9affb6018d00de0aa7916825e84a500b9 WHIRLPOOL 39e50ee3e12e252d85343e0ac4ad37dfd517d4e0e282e1d7e1899fdad0ddf201ba0761cd50925c86d778d97c670a4e89524e39f9955ce8119b1ae9d7da54ed03
+MISC ChangeLog 17984 SHA256 9c669a4464b8a2a30b2a9dd34dd28752253cf99e3bfc5433e13099b284da11c2 SHA512 31333d41cb08cc137caa4729a508c90acf4e3cc84e362346908e459857e6629950fd518eab202da09f14fa9da7512c71bd7ebe82dd888232a1534209b43a2a09 WHIRLPOOL 9334b2ce72746c496d8ef7876aa23c2964cc397ede3a3e3f007e0e1a29a067deb8a336dcc5114ee9ad544de89e861b887d24ff905708e933c303513b9125dc11
 MISC metadata.xml 9998 SHA256 f881ff06883a68ca0897c4f3b6aa784511026bfd821b9c618cc44704d1aa91cb SHA512 053c5d5c0e16ee59dc0c5456c40ff070f8199ea723880bd49b05d88e1aca419e7ff43c1c42f3ce4442807e9eb702b426b549a55f699a2218eed177f4f56ed012 WHIRLPOOL 1afe82eda0f8cd4846dd0b8f0294fb9fbbdd3eaa65b236c535bc6cae56cce2358473253ade683175c5127cb0a1bec1ed61951bb31b0b50e7c0cfb83dc6bda9f5
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2
 
-iQEcBAEBCAAGBQJTpQW6AAoJEEqz6FtPBkyjcPYH/R5OW2Y9OxNCJwj/2aZwbwC+
-9Gn+1EjXAk8iVKOI12mfUL5yvcuD9O7Z2I6O/Dxnf3R92rhJJJxdiBteQn9/XZvN
-J/3mwpXzZy3+6XE4cVlwXTX2RnY8YBHFYpyyNwdjrdYrv/gYrNohqTDl7tvMReYO
-YZvzIbHY2BKtJovF5M3mvWVvBU1PJG4HsxKBmjsQKDdpZy/BYFYfNoZSowJWv0yP
-R7rBJkdYigsz+FHkyUvNVX1etL9skRHkjkfDstjVZd++4Ta6fHVjqsdINarGvExb
-Pz3OlBZBmU3mX2GphSvDV9/WQex/HslA66Le8QAamoUvvSPNlHE5oqA+QPs5bpI=
-=TCwT
+iQEcBAEBCAAGBQJTtjsZAAoJEEqz6FtPBkyj76oH+wXIoDTV/G0NzZ50IQNOU6XS
+HI3cYmuat772vm0C4G0PkJE9KmmdD0P6W068nmUp4QXk0JA8LrLuGhh6jbbC9n2H
+xWJ77NAUyeYBhHvL2EM1J+XmfYORfJm1hTuhjIsED+jkuYNk5ZnoEswO+NPr7/MM
+ve4QJT9C2T1NEGS2/cfpNX3HoRRBnKFVfEGqWsL4GaUiTCl9YK7SyIhjUrp5Teq9
+qiDt2iK8dqLQbytYwQVwRdMDSiKCYRX3uhs1kkymWzanOSO9V742nnnYYUydDoLl
++j+s6fQQDap0hBZOE7FYjJS//aKehySJ5K42uuwjeaeQpYHm7deEmktaCc55+Is=
+=eCwk
 -----END PGP SIGNATURE-----
