@@ -1,0 +1,12 @@
+DEFINED_PHASES=compile configure install prepare test unpack
+DEPEND=dev-lang/perl:=[-build(-)]
+DESCRIPTION=Read and write meta information in image, audio and video files
+EAPI=5
+HOMEPAGE=http://www.sno.phy.queensu.ca/~phil/exiftool/ http://search.cpan.org/dist/Image-ExifTool/
+KEYWORDS=~amd64 ~ppc ~ppc64 ~x86 ~x64-macos
+LICENSE=|| ( Artistic GPL-1 GPL-2 GPL-3 )
+RDEPEND=dev-lang/perl:=[-build(-)]
+SLOT=0
+SRC_URI=http://www.sno.phy.queensu.ca/~phil/exiftool/Image-ExifTool-9.66.tar.gz
+_eclasses_=eutils	025442f2eecab39ad0b4e541b6e142af	multilib	fac675dcccf94392371a6abee62d909f	multiprocessing	c2d96fb38f2596209e98fceda58ba1ed	perl-module	a6a2d5c77bdaeba2794b167689cafb7a	toolchain-funcs	48b38a216afb92db6314d6c3187abea3	unpacker	4495f6885ab72b2cc94467e9a89fa641
+_md5_=258968586568036b3988c2287d1f44f2
