@@ -1,6 +1,11 @@
 # ChangeLog for media-libs/exiftool
 # Copyright 1999-2014 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/media-libs/exiftool/ChangeLog,v 1.141 2014/06/21 04:10:31 radhermit Exp $
+# $Header: /var/cvsroot/gentoo-x86/media-libs/exiftool/ChangeLog,v 1.142 2014/07/04 05:26:46 radhermit Exp $
+
+*exiftool-9.66 (04 Jul 2014)
+
+  04 Jul 2014; Tim Harder <radhermit@gentoo.org> +exiftool-9.66.ebuild:
+  Version bump.
 
 *exiftool-9.65 (21 Jun 2014)
 
